@@ -13,19 +13,19 @@ Disassembly of section .text:
    c:	3c040000 	lui	a0,0x0
   10:	24840000 	addiu	a0,a0,0
   14:	3c040000 	lui	a0,0x0
-  18:	24840154 	addiu	a0,a0,340
-  1c:	08000055 	j	154 <[^>]*>
-  20:	0c000055 	jal	154 <[^>]*>
+  18:	2484015c 	addiu	a0,a0,348
+  1c:	08000057 	j	15c <[^>]*>
+  20:	0c000057 	jal	15c <[^>]*>
   24:	8f84c000 	lw	a0,-16384\(gp\)
   28:	3c040000 	lui	a0,0x0
   2c:	8c840000 	lw	a0,0\(a0\)
   30:	3c040000 	lui	a0,0x0
-  34:	8c840154 	lw	a0,340\(a0\)
+  34:	8c84015c 	lw	a0,348\(a0\)
   38:	df84c000 	ld	a0,-16384\(gp\)
   3c:	3c040000 	lui	a0,0x0
   40:	dc840000 	ld	a0,0\(a0\)
   44:	3c040000 	lui	a0,0x0
-  48:	dc840154 	ld	a0,340\(a0\)
+  48:	dc84015c 	ld	a0,348\(a0\)
   4c:	af84c000 	sw	a0,-16384\(gp\)
   50:	3c010000 	lui	at,0x0
   54:	ac240000 	sw	a0,0\(at\)
@@ -78,20 +78,22 @@ Disassembly of section .text:
  110:	24210000 	addiu	at,at,0
  114:	b0240000 	sdl	a0,0\(at\)
  118:	b4240007 	sdr	a0,7\(at\)
- 11c:	3c018000 	lui	at,0x8000
- 120:	0081082a 	slt	at,a0,at
- 124:	1020000b 	beqz	at,154 <[^>]*>
- 128:	34018000 	li	at,0x8000
- 12c:	00010c78 	dsll	at,at,0x11
- 130:	0081082b 	sltu	at,a0,at
- 134:	10200007 	beqz	at,154 <[^>]*>
- 138:	3c018000 	lui	at,0x8000
- 13c:	0081082a 	slt	at,a0,at
- 140:	14200004 	bnez	at,154 <[^>]*>
- 144:	34018000 	li	at,0x8000
- 148:	00010c78 	dsll	at,at,0x11
- 14c:	0081082b 	sltu	at,a0,at
- 150:	14200000 	bnez	at,154 <[^>]*>
+ 11c:	34018000 	li	at,0x8000
+ 120:	00010c38 	dsll	at,at,0x10
+ 124:	0081082a 	slt	at,a0,at
+ 128:	1020000c 	beqz	at,15c <[^>]*>
+ 12c:	34018000 	li	at,0x8000
+ 130:	00010c78 	dsll	at,at,0x11
+ 134:	0081082b 	sltu	at,a0,at
+ 138:	10200008 	beqz	at,15c <[^>]*>
+ 13c:	34018000 	li	at,0x8000
+ 140:	00010c38 	dsll	at,at,0x10
+ 144:	0081082a 	slt	at,a0,at
+ 148:	14200004 	bnez	at,15c <[^>]*>
+ 14c:	34018000 	li	at,0x8000
+ 150:	00010c78 	dsll	at,at,0x11
+ 154:	0081082b 	sltu	at,a0,at
+ 158:	14200000 	bnez	at,15c <[^>]*>
 
-0+0154 <[^>]*>:
+0+015c <[^>]*>:
 	...
